Fixed header to top of page, styled new media queries to stop the header overlapping the circles in about-us section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ p {
     width: 100%;
     height: 75px;
     background-color: white;
-    position: relative;
+    position: fixed;
     top: 0;
     overflow: hidden;
 }
@@ -72,6 +72,7 @@ nav li {
     background: url(../images/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds.jpg) center center no-repeat;
     background-size: cover;
     padding-bottom: 10px;
+    margin-top:40px;
 }
 
 .circle {
@@ -380,6 +381,10 @@ input:focus {
         clear: both;
         position: relative;
         float: left;
+    }
+
+    #about-us{
+        margin-top:80px;
     }
 
     .times-section {
